--- a/index.html
+++ b/index.html
@@ -10,10 +10,61 @@
 <body>
     <h1> pagina de deportes aqui
         <br>
-        ingenieria en videojuegos
-    <i class="fas fa-user"> </i>
-    <i class="fa-brands fa-facebook"> </i>
-    <i class="fa-solid fa-location-dot"> </i>
+        <div style="width: 100%; height: 100%; position: relative; background: black">
+            <div style="width: 61px; height: 17px; left: 776px; top: 41px; position: absolute; color: white; font-size: 12px; font-family: Inter; font-style: italic; font-weight: 900; word-wrap: break-word">Home</div>
+            <div style="width: 282px; height: 27px; left: 1081px; top: 36px; position: absolute; justify-content: center; align-items: center; display: inline-flex">
+                <div style="width: 282px; height: 27px; background: #545454; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border: 1px white solid"></div>
+            </div>
+            <div style="width: 1440px; height: 95px; left: 0px; top: 0px; position: absolute; background: #E74E4E; justify-content: center; align-items: center; display: inline-flex">
+                <div style="width: 1440px; height: 95px; background: linear-gradient(90deg, #663304 0%, #E5E446 22%, #DCDE78 37%, #B05F00 85%, #FFF59D 100%); box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border: 1px #B14343 solid"></div>
+            </div>
+            <div style="width: 282px; height: 27px; left: 1081px; top: 36px; position: absolute">
+                <div style="width: 282px; height: 27px; left: 0px; top: 0px; position: absolute; justify-content: center; align-items: center; display: inline-flex">
+                    <div style="width: 282px; height: 27px; background: #545454; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border: 1px white solid"></div>
+                </div>
+                <img style="width: 29px; height: 27px; left: 0px; top: 0px; position: absolute" src="https://via.placeholder.com/29x27" />
+            </div>
+            <img style="width: 1440px; height: 446px; left: 0px; top: 95px; position: absolute; border: 6px #FFDF8E solid" src="https://via.placeholder.com/1440x446" />
+            <img style="width: 289px; height: 292px; left: 16px; top: 420px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 9999px; border: 14px #184977 solid" src="https://via.placeholder.com/289x292" />
+            <div style="width: 191px; height: 157px; left: 44px; top: 1128px; position: absolute; background: #D9D9D9"></div>
+            <div style="width: 191px; height: 157px; left: 483px; top: 1128px; position: absolute; background: #D9D9D9"></div>
+            <div style="width: 192px; height: 157px; left: 263px; top: 1128px; position: absolute; background: #D9D9D9"></div>
+            <div style="width: 192px; height: 157px; left: 766px; top: 939px; position: absolute; background: #D9D9D9"></div>
+            <div style="width: 191px; height: 157px; left: 1205px; top: 939px; position: absolute; background: #D9D9D9"></div>
+            <div style="width: 191px; height: 157px; left: 986px; top: 939px; position: absolute; background: #D9D9D9"></div>
+            <div style="width: 191px; height: 157px; left: 44px; top: 1128px; position: absolute; background: #D9D9D9"></div>
+            <div style="width: 191px; height: 157px; left: 483px; top: 1128px; position: absolute; background: #D9D9D9"></div>
+            <div style="width: 192px; height: 157px; left: 263px; top: 1128px; position: absolute; background: #D9D9D9"></div>
+            <div style="width: 191px; height: 157px; left: 44px; top: 939px; position: absolute; background: #D9D9D9"></div>
+            <div style="width: 191px; height: 157px; left: 483px; top: 939px; position: absolute; background: #D9D9D9"></div>
+            <div style="width: 192px; height: 157px; left: 263px; top: 939px; position: absolute; background: #D9D9D9"></div>
+            <img style="width: 191px; height: 157px; left: 44px; top: 939px; position: absolute; border: 5px white solid" src="https://via.placeholder.com/191x157" />
+            <div style="width: 191px; height: 157px; left: 483px; top: 939px; position: absolute; background: #D9D9D9"></div>
+            <div style="width: 192px; height: 157px; left: 263px; top: 939px; position: absolute; background: #D9D9D9"></div>
+            <div style="width: 192px; height: 157px; left: 766px; top: 1128px; position: absolute; background: #D9D9D9"></div>
+            <div style="width: 191px; height: 157px; left: 1205px; top: 1128px; position: absolute; background: #D9D9D9"></div>
+            <div style="width: 191px; height: 157px; left: 986px; top: 1128px; position: absolute; background: #D9D9D9"></div>
+            <div style="width: 940px; height: 64px; left: 277px; top: 807px; position: absolute; background: #D9D9D9"></div>
+            <div style="width: 157px; height: 52px; left: 1082px; top: 1769px; position: absolute; background: #232323"></div>
+            <div style="width: 578px; height: 443px; left: 116px; top: 1385px; position: absolute; background: #D9D9D9; border-radius: 50px"></div>
+            <div style="width: 578px; height: 443px; left: 746px; top: 1385px; position: absolute; background: #D9D9D9; border-radius: 53px"></div>
+            <div style="width: 578px; height: 443px; left: 746px; top: 1385px; position: absolute; background: #D9D9D9; border-radius: 53px"></div>
+            <div style="width: 253px; height: 52px; left: 1050px; top: 1769px; position: absolute; background: #D9D9D9; border-radius: 54px; border: 7px black solid"></div>
+            <img style="width: 444px; height: 89px; left: 317px; top: 566px; position: absolute" src="https://via.placeholder.com/444x89" />
+            <div style="width: 197px; height: 33px; left: 137px; top: 1406px; position: absolute; color: black; font-size: 24px; font-family: Inter; font-style: italic; font-weight: 900; word-wrap: break-word">About me</div>
+            <div style="width: 197px; height: 33px; left: 662px; top: 822px; position: absolute; color: black; font-size: 24px; font-family: Inter; font-style: italic; font-weight: 900; word-wrap: break-word">Evidencias</div>
+            <div style="width: 197px; height: 33px; left: 788px; top: 1400px; position: absolute; color: black; font-size: 24px; font-family: Inter; font-style: italic; font-weight: 900; word-wrap: break-word">jobs</div>
+            <div style="width: 537px; height: 349px; left: 130px; top: 1453px; position: absolute; color: black; font-size: 24px; font-family: Inter; font-style: italic; font-weight: 900; word-wrap: break-word">____________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________</div>
+            <div style="width: 537px; height: 349px; left: 768px; top: 1410px; position: absolute; color: black; font-size: 24px; font-family: Inter; font-style: italic; font-weight: 900; word-wrap: break-word">____________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________</div>
+            <img style="width: 73px; height: 68px; left: 36px; top: 19px; position: absolute; border-radius: 9999px" src="https://via.placeholder.com/73x68" />
+            <div style="width: 1440px; height: 95px; left: 0px; top: 0px; position: absolute; background: #E74E4E; justify-content: center; align-items: center; display: inline-flex">
+                <div style="width: 1440px; height: 95px; background: linear-gradient(90deg, #663304 0%, #E5E446 22%, #DCDE78 37%, #B05F00 85%, #FFF59D 100%); box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border: 1px #B14343 solid"></div>
+            </div>
+            <img style="width: 73px; height: 68px; left: 36px; top: 19px; position: absolute; border-radius: 9999px" src="https://via.placeholder.com/73x68" />
+            <div style="width: 315px; height: 80px; left: 1110px; top: 461px; position: absolute; color: white; font-size: 40px; font-family: Tillana; font-weight: 700; word-wrap: break-word">CONTACTAME</div>
+            <div style="width: 297px; height: 64px; left: 1119px; top: 1779px; position: absolute; color: black; font-size: 24px; font-family: Inter; font-style: italic; font-weight: 900; word-wrap: break-word">VER MAS...</div>
+        </div>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3756.2949387610647!2d-101.25537792463007!3d19.70006343208464!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842d0952b721df01%3A0xc9c72c0a0f1dcd4f!2sMiguel%20Castellanos%20S%C3%A1nchez%2C%20La%20Esperanza%2C%2058337%20Morelia%2C%20Mich.!5e0!3m2!1ses-419!2smx!4v1718222633487!5m2!1ses-419!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </h1>
 </body>
 </html>
