--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <body bgcolor="black" align="center"></body>
-    <h1>
+    <h1><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3756.2949387610647!2d-101.25537792463007!3d19.70006343208464!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842d0952b721df01%3A0xc9c72c0a0f1dcd4f!2sMiguel%20Castellanos%20S%C3%A1nchez%2C%20La%20Esperanza%2C%2058337%20Morelia%2C%20Mich.!5e0!3m2!1ses-419!2smx!4v1718222633487!5m2!1ses-419!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>            
         <div style="width: 100%; height: 100%; position: relative; background: black">
             <div style="width: 61px; height: 17px; left: 776px; top: 41px; position: absolute; color: white; font-size: 12px; font-family: Inter; font-style: italic; font-weight: 900; word-wrap: break-word">Home</div>
             <div style="width: 282px; height: 27px; left: 1081px; top: 36px; position: absolute; justify-content: center; align-items: center; display: inline-flex">
@@ -48,8 +48,8 @@
             <div style="width: 157px; height: 52px; left: 1082px; top: 1769px; position: absolute; background: #232323"></div>
             <div style="width: 578px; height: 443px; left: 746px; top: 1385px; position: absolute; background: #D9D9D9; border-radius: 53px"></div>
             <div style="width: 578px; height: 443px; left: 746px; top: 1385px; position: absolute; background: #D9D9D9; border-radius: 53px"></div>
-            <div style="width: 578px; height: 443px; left: 71px; top: 1378px; position: absolute; background: #D9D9D9; border-radius: 53px"></div><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3756.2949387610647!2d-101.25537792463007!3d19.70006343208464!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842d0952b721df01%3A0xc9c72c0a0f1dcd4f!2sMiguel%20Castellanos%20S%C3%A1nchez%2C%20La%20Esperanza%2C%2058337%20Morelia%2C%20Mich.!5e0!3m2!1ses-419!2smx!4v1718222633487!5m2!1ses-419!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-
+            <div style="width: 578px; height: 443px; left: 71px; top: 1378px; position: absolute">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3756.2949387610647!2d-101.25537792463007!3d19.70006343208464!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842d0952b721df01%3A0xc9c72c0a0f1dcd4f!2sMiguel%20Castellanos%20S%C3%A1nchez%2C%20La%20Esperanza%2C%2058337%20Morelia%2C%20Mich.!5e0!3m2!1ses-419!2smx!4v1718222633487!5m2!1ses-419!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <div style="width: 253px; height: 52px; left: 1034px; top: 1759px; position: absolute; background: #D9D9D9; border-radius: 54px; border: 7px black solid"></div>
             <img style="width: 444px; height: 89px; left: 277px; top: 507px; position: absolute" src="https://via.placeholder.com/444x89" />
             <div style="width: 197px; height: 33px; left: 662px; top: 822px; position: absolute; color: black; font-size: 24px; font-family: Inter; font-style: italic; font-weight: 900; word-wrap: break-word">Evidencias</div>
