--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="evidencias.html">
 </head>
 <body>
-    <body bgcolor="black" align="center"></body>
+    <body bgcolor="black"</body>
     <h1>
         <div style="width: 100%; height: 100%; position: relative; background: black">
             <div style="width: 61px; height: 17px; left: 776px; top: 41px; position: absolute; color: white; font-size: 12px; font-family: Inter; font-style: italic; font-weight: 900; word-wrap: break-word">Home</div>
