--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <img style="width: 29px; height: 27px; left: 0px; top: 0px; position: absolute" src="https://via.placeholder.com/29x27" />
             </div>
             <img style="width: 1440px; height: 446px; left: 0px; top: 95px; position: absolute; border: 6px #FFDF8E solid" src="https://via.placeholder.com/1440x446" />
-            <img style="width: 289px; height: 292px; left: 16px; top: 420px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 9999px; border: 14px #184977 solid" src="https://via.placeholder.com/289x292" />
+            <img style="width: 289px; height: 292px; left: 16px; top: 420px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 9999px; border: 14px #184977 solid" src="perfil.jpeg" />
             <div style="width: 191px; height: 157px; left: 44px; top: 1128px; position: absolute; background: #D9D9D9"></div>
             <div style="width: 191px; height: 157px; left: 483px; top: 1128px; position: absolute; background: #D9D9D9"></div>
             <div style="width: 192px; height: 157px; left: 263px; top: 1128px; position: absolute; background: #D9D9D9"></div>
