--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div style="width: 191px; height: 157px; left: 44px; top: 1128px; position: absolute; background: #D9D9D9"></div>
             <div style="width: 191px; height: 157px; left: 483px; top: 1128px; position: absolute; background: #D9D9D9"></div>
             <div style="width: 192px; height: 157px; left: 263px; top: 1128px; position: absolute; background: #D9D9D9"></div>
-            <img style="width: 192px; height: 157px; left: 766px; top: 939px; position: absolute; border: 5px white solid" src="https://via.placeholder.com/192x157" />
+            <a href="add.php"><input type="submit"><img style="width: 192px; height: 157px; left: 766px; top: 939px; position: absolute; border: 5px white solid" src="zelda.jpg" /></a>
             <img style="width: 191px; height: 157px; left: 1205px; top: 939px; position: absolute; border: 5px white solid" src="https://via.placeholder.com/191x157" />
             <img style="width: 191px; height: 157px; left: 986px; top: 939px; position: absolute; border: 5px white solid" src="https://via.placeholder.com/191x157" />
             <img style="width: 191px; height: 157px; left: 44px; top: 1128px; position: absolute; border: 5px white solid" src="https://via.placeholder.com/191x157" />
