--- a/index.html
+++ b/index.html
@@ -26,31 +26,25 @@
             </div>
             <img style="width: 1440px; height: 446px; left: 0px; top: 95px; position: absolute; border: 6px #FFDF8E solid" src="https://via.placeholder.com/1440x446" />
             <img style="width: 289px; height: 292px; left: 16px; top: 420px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 9999px; border: 14px #184977 solid" src="perfil.jpeg" />
-            <div style="width: 191px; height: 157px; left: 44px; top: 1128px; position: absolute; background: #D9D9D9"></div>
-            <div style="width: 191px; height: 157px; left: 483px; top: 1128px; position: absolute; background: #D9D9D9"></div>
-            <div style="width: 192px; height: 157px; left: 263px; top: 1128px; position: absolute; background: #D9D9D9"></div>
             <a href="zelda.jpg"><input type="submit"><img style="width: 192px; height: 157px; left: 766px; top: 939px; position: absolute; border: 5px white solid" src="zelda.jpg" /></a>
-            <img style="width: 191px; height: 157px; left: 1205px; top: 939px; position: absolute; border: 5px white solid" src="https://via.placeholder.com/191x157" />
-            <img style="width: 191px; height: 157px; left: 986px; top: 939px; position: absolute; border: 5px white solid" src="https://via.placeholder.com/191x157" />
-            <img style="width: 191px; height: 157px; left: 44px; top: 1128px; position: absolute; border: 5px white solid" src="https://via.placeholder.com/191x157" />
-            <img style="width: 191px; height: 157px; left: 483px; top: 1128px; position: absolute; border: 5px white solid" src="https://via.placeholder.com/191x157" />
-            <img style="width: 192px; height: 157px; left: 263px; top: 1128px; position: absolute; border: 5px white solid" src="https://via.placeholder.com/192x157" />
-            <div style="width: 191px; height: 157px; left: 44px; top: 939px; position: absolute; background: #D9D9D9"></div>
-            <div style="width: 191px; height: 157px; left: 483px; top: 939px; position: absolute; background: #D9D9D9"></div>
-            <div style="width: 192px; height: 157px; left: 263px; top: 939px; position: absolute; background: #D9D9D9"></div>
-            <img style="width: 191px; height: 157px; left: 44px; top: 939px; position: absolute; border: 5px white solid" src="https://via.placeholder.com/191x157" />
-            <img style="width: 191px; height: 157px; left: 483px; top: 939px; position: absolute; border: 5px white solid" src="https://via.placeholder.com/191x157" />
-            <img style="width: 192px; height: 157px; left: 263px; top: 939px; position: absolute; border: 5px white solid" src="https://via.placeholder.com/192x157" />
-            <img style="width: 192px; height: 157px; left: 766px; top: 1128px; position: absolute; border: 5px white solid" src="https://via.placeholder.com/192x157" />
-            <img style="width: 191px; height: 157px; left: 1205px; top: 1128px; position: absolute; border: 5px white solid" src="https://via.placeholder.com/191x157" />
-            <img style="width: 191px; height: 157px; left: 986px; top: 1128px; position: absolute; border: 5px white solid" src="https://via.placeholder.com/191x157" />
+            <a href="MegaroidCity.jpg"><input type="submit"><img style="width: 191px; height: 157px; left: 1205px; top: 939px; position: absolute; border: 5px white solid" src="MegaroidCity.jpg" /></a>
+            <a href="3425081.jpg"><input type="submit"><img style="width: 191px; height: 157px; left: 986px; top: 939px; position: absolute; border: 5px white solid" src="3425081.jpg"/></a>
+            <a href="cAO5uXj-sports-hd-wallpapers.jpg"><input type="submit"><img style="width: 191px; height: 157px; left: 44px; top: 1128px; position: absolute; border: 5px white solid" src="cAO5uXj-sports-hd-wallpapers.jpg" /></a>
+            <a href="Default_vape_sad_man_3.jpg"><input type="submit"><img style="width: 191px; height: 157px; left: 483px; top: 1128px; position: absolute; border: 5px white solid" src="Default_vape_sad_man_3.jpg" /></a>
+            <a href="deportes (1).png"><input type="submit"><img style="width: 192px; height: 157px; left: 263px; top: 1128px; position: absolute; border: 5px white solid" src="deportes (1).png" /></a>
+            <a href="new-persona-3-reload-art-v0-2pfxinfmmadc1.png"><input type="submit"><img style="width: 191px; height: 157px; left: 44px; top: 939px; position: absolute; border: 5px white solid" src="new-persona-3-reload-art-v0-2pfxinfmmadc1.png" /></a>
+            <a href="ot.png"><input type="submit"><img style="width: 191px; height: 157px; left: 483px; top: 939px; position: absolute; border: 5px white solid" src="ot.png" /></a>
+            <a href="ta bien.gif"><input type="submit"><img style="width: 192px; height: 157px; left: 263px; top: 939px; position: absolute; border: 5px white solid" src="ta bien.gif" /></a>
+            <a href="wallpaperflare.com_wallpaper (3).jpg"><input type="submit"><img style="width: 192px; height: 157px; left: 766px; top: 1128px; position: absolute; border: 5px white solid" src="wallpaperflare.com_wallpaper (3).jpg" /></a>
+            <a href="wp7609542-gaming-neon-wallpapers.jpg"><input type="submit"><img style="width: 191px; height: 157px; left: 1205px; top: 1128px; position: absolute; border: 5px white solid" src="wp7609542-gaming-neon-wallpapers.jpg" /></a>
+            <a href=""><input type="submit"><img style="width: 191px; height: 157px; left: 986px; top: 1128px; position: absolute; border: 5px white solid" src="" /></a>
             <div style="width: 940px; height: 64px; left: 277px; top: 807px; position: absolute; background: #D9D9D9"></div>
             <div style="width: 157px; height: 52px; left: 1082px; top: 1769px; position: absolute; background: #232323"></div>
             <div style="width: 578px; height: 443px; left: 746px; top: 1385px; position: absolute; background: #D9D9D9; border-radius: 53px"></div>
             <div style="width: 578px; height: 443px; left: 746px; top: 1385px; position: absolute; background: #D9D9D9; border-radius: 53px"></div>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3756.2949387610647!2d-101.25537792463007!3d19.70006343208464!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842d0952b721df01%3A0xc9c72c0a0f1dcd4f!2sMiguel%20Castellanos%20S%C3%A1nchez%2C%20La%20Esperanza%2C%2058337%20Morelia%2C%20Mich.!5e0!3m2!1ses-419!2smx!4v1718222633487!5m2!1ses-419!2smx" style="width: 578px; height: 443px;  left: 71px; top: 1378px; position: absolute;"></iframe>
             <div style="width: 253px; height: 52px; left: 1034px; top: 1759px; position: absolute; background: #D9D9D9; border-radius: 54px; border: 7px black solid"></div>
-            <img style="width: 444px; height: 89px; left: 277px; top: 507px; position: absolute" src="https://via.placeholder.com/444x89" />
+            <img style="width: 444px; height: 89px; left: 277px; top: 507px; position: absolute" src="perfil (1).png" />
             <div style="width: 197px; height: 33px; left: 662px; top: 822px; position: absolute; color: black; font-size: 24px; font-family: Inter; font-style: italic; font-weight: 900; word-wrap: break-word">Evidencias</div>
             <div style="width: 197px; height: 33px; left: 788px; top: 1400px; position: absolute; color: black; font-size: 24px; font-family: Inter; font-style: italic; font-weight: 900; word-wrap: break-word">jobs</div>
             <div style="width: 537px; height: 349px; left: 768px; top: 1410px; position: absolute; color: black; font-size: 24px; font-family: Inter; font-style: italic; font-weight: 900; word-wrap: break-word">____________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________</div>
