--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <img style="width: 29px; height: 27px; left: 0px; top: 0px; position: absolute" src="https://via.placeholder.com/29x27" />
             </div>
-            <img style="width: 1440px; height: 446px; left: 0px; top: 95px; position: absolute; border: 6px #FFDF8E solid" src="https://via.placeholder.com/1440x446" />
+            <img style="width: 1440px; height: 446px; left: 0px; top: 95px; position: absolute; border: 6px #FFDF8E solid" src="portada.png" />
             <img style="width: 289px; height: 292px; left: 16px; top: 420px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 9999px; border: 14px #184977 solid" src="perfil.jpeg" />
             <a href="zelda.jpg"><input type="submit"><img style="width: 192px; height: 157px; left: 766px; top: 939px; position: absolute; border: 5px white solid" src="zelda.jpg" /></a>
             <a href="MegaroidCity.jpg"><input type="submit"><img style="width: 191px; height: 157px; left: 1205px; top: 939px; position: absolute; border: 5px white solid" src="MegaroidCity.jpg" /></a>
@@ -37,7 +37,7 @@
             <a href="ta bien.gif"><input type="submit"><img style="width: 192px; height: 157px; left: 263px; top: 939px; position: absolute; border: 5px white solid" src="ta bien.gif" /></a>
             <a href="wallpaperflare.com_wallpaper (3).jpg"><input type="submit"><img style="width: 192px; height: 157px; left: 766px; top: 1128px; position: absolute; border: 5px white solid" src="wallpaperflare.com_wallpaper (3).jpg" /></a>
             <a href="wp7609542-gaming-neon-wallpapers.jpg"><input type="submit"><img style="width: 191px; height: 157px; left: 1205px; top: 1128px; position: absolute; border: 5px white solid" src="wp7609542-gaming-neon-wallpapers.jpg" /></a>
-            <a href=""><input type="submit"><img style="width: 191px; height: 157px; left: 986px; top: 1128px; position: absolute; border: 5px white solid" src="" /></a>
+            <a href="Koromaruuu.jpeg"><input type="submit"><img style="width: 191px; height: 157px; left: 986px; top: 1128px; position: absolute; border: 5px white solid" src="Koromaruuu.jpeg" /></a>
             <div style="width: 940px; height: 64px; left: 277px; top: 807px; position: absolute; background: #D9D9D9"></div>
             <div style="width: 157px; height: 52px; left: 1082px; top: 1769px; position: absolute; background: #232323"></div>
             <div style="width: 578px; height: 443px; left: 746px; top: 1385px; position: absolute; background: #D9D9D9; border-radius: 53px"></div>
@@ -59,7 +59,7 @@
             <div style="width: 193.46px; height: 27.18px; left: 60.71px; top: 195.11px; position: absolute; color: white; font-size: 24px; font-family: Times New Roman; font-weight: 400; word-wrap: break-word">Angel The Traveler</div>
             <div style="width: 299.46px; height: 27.18px; left: 60.71px; top: 132.01px; position: absolute; color: white; font-size: 24px; font-family: Times New Roman; font-weight: 400; word-wrap: break-word">Angeldionisio2@hotmail.com</div>
             <div style="width: 350.91px; height: 27.18px; left: 60.71px; top: 69.89px; position: absolute; color: white; font-size: 24px; font-family: Times New Roman; font-weight: 400; word-wrap: break-word">No tengo(imagina que ahi hay uno)</div>
-            <div style="width: 350.91px; height: 27.18px; left: 71px; top: 304px; position: absolute; color: white; font-size: 24px; font-family: Times New Roman; font-weight: 400; word-wrap: break-word">El Gamer Viajero</div>
+            <a href="https://www.youtube.com/channel/UC8UNDST-mnZb7_egMMZLp1A"></a><div style="width: 350.91px; height: 27.18px; left: 71px; top: 304px; position: absolute; color: white; font-size: 24px; font-family: Times New Roman; font-weight: 400; word-wrap: break-word">El Gamer Viajero</div>
             <div style="width: 123.49px; height: 27.18px; left: 60.71px; top: 260.14px; position: absolute; color: white; font-size: 24px; font-family: Times New Roman; font-weight: 400; word-wrap: break-word">4473513452</div>
             <img style="width: 41.16px; height: 38.83px; left: 11.32px; top: 182.49px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 9999px; border: 4px rgba(2.30, 116.46, 165.38, 0.53) solid" src="https://via.placeholder.com/41x39" />
             <img style="width: 41.16px; height: 38.83px; left: 11.32px; top: 120.36px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 9999px; border: 4px #235A5D solid" src="https://via.placeholder.com/41x39" />
@@ -68,7 +68,7 @@
             <div style="width: 332.38px; height: 34.94px; left: 44.25px; top: 9.71px; position: absolute; text-align: center; color: white; font-size: 32px; font-family: Times New Roman; font-weight: 400; text-decoration: underline; word-wrap: break-word">INF. CONTACTO</div>
             </div>
             <div style="width: 297px; height: 64px; left: 1105px; top: 1772px; position: absolute; color: black; font-size: 24px; font-family: Inter; font-style: italic; font-weight: 900; word-wrap: break-word">VER MAS...</div>
-            <img style="width: 50px; height: 40px; left: 1003px; top: 411px; position: absolute" src="https://via.placeholder.com/50x40" />
+            <img style="width: 50px; height: 40px; left: 1003px; top: 411px; position: absolute" src="perfil (2).png" />
             </div>
         </h1>
 </body>
