--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div style="width: 193.46px; height: 27.18px; left: 60.71px; top: 195.11px; position: absolute; color: white; font-size: 24px; font-family: Times New Roman; font-weight: 400; word-wrap: break-word">Angel The Traveler</div>
             <div style="width: 299.46px; height: 27.18px; left: 60.71px; top: 132.01px; position: absolute; color: white; font-size: 24px; font-family: Times New Roman; font-weight: 400; word-wrap: break-word">Angeldionisio2@hotmail.com</div>
             <div style="width: 350.91px; height: 27.18px; left: 60.71px; top: 69.89px; position: absolute; color: white; font-size: 24px; font-family: Times New Roman; font-weight: 400; word-wrap: break-word">No tengo(imagina que ahi hay uno)</div>
-            <a href="https://www.youtube.com/channel/UC8UNDST-mnZb7_egMMZLp1A"></a><div style="width: 350.91px; height: 27.18px; left: 71px; top: 304px; position: absolute; color: white; font-size: 24px; font-family: Times New Roman; font-weight: 400; word-wrap: break-word">El Gamer Viajero</div>
+            <div style="width: 350.91px; height: 27.18px; left: 71px; top: 304px; position: absolute; color: white; font-size: 24px; font-family: Times New Roman; font-weight: 400; word-wrap: break-word"><a href="https://www.youtube.com/channel/UC8UNDST-mnZb7_egMMZLp1A">El Gamer Viajero</div></a>
             <div style="width: 123.49px; height: 27.18px; left: 60.71px; top: 260.14px; position: absolute; color: white; font-size: 24px; font-family: Times New Roman; font-weight: 400; word-wrap: break-word">4473513452</div>
             <img style="width: 41.16px; height: 38.83px; left: 11.32px; top: 182.49px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 9999px; border: 4px rgba(2.30, 116.46, 165.38, 0.53) solid" src="https://via.placeholder.com/41x39" />
             <img style="width: 41.16px; height: 38.83px; left: 11.32px; top: 120.36px; position: absolute; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 9999px; border: 4px #235A5D solid" src="https://via.placeholder.com/41x39" />
@@ -68,7 +68,7 @@
             <div style="width: 332.38px; height: 34.94px; left: 44.25px; top: 9.71px; position: absolute; text-align: center; color: white; font-size: 32px; font-family: Times New Roman; font-weight: 400; text-decoration: underline; word-wrap: break-word">INF. CONTACTO</div>
             </div>
             <div style="width: 297px; height: 64px; left: 1105px; top: 1772px; position: absolute; color: black; font-size: 24px; font-family: Inter; font-style: italic; font-weight: 900; word-wrap: break-word">VER MAS...</div>
-            <img style="width: 50px; height: 40px; left: 1003px; top: 411px; position: absolute" src="perfil (2).png" />
+            <a href="https://www.youtube.com/channel/UC8UNDST-mnZb7_egMMZLp1A"><img style="width: 50px; height: 40px; left: 1003px; top: 411px; position: absolute" src="perfil (2).png" /></a>
             </div>
         </h1>
 </body>
