--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div style="width: 1440px; height: 95px; left: 0px; top: 0px; position: absolute; background: #E74E4E; justify-content: center; align-items: center; display: inline-flex">
             <div style="width: 1440px; height: 95px; background: linear-gradient(90deg, #663304 0%, #E5E446 22%, #DCDE78 37%, #B05F00 85%, #FFF59D 100%); box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border: 1px #B14343 solid"></div>
             </div>
-            <img style="width: 73px; height: 68px; left: 36px; top: 19px; position: absolute; border-radius: 9999px" src="https://via.placeholder.com/73x68" />
+            <img style="width: 73px; height: 68px; left: 36px; top: 19px; position: absolute; border-radius: 9999px" src="inicio.png" />
             <div style="width: 315px; height: 80px; left: 1078px; top: 461px; position: absolute; color: white; font-size: 40px; font-family: Tillana; font-weight: 700; word-wrap: break-word">CONTACTAME</div>
             <div style="width: 425px; height: 348px; left: 992px; top: 113px; position: absolute">
             <div style="width: 425px; height: 348px; left: 0px; top: 0px; position: absolute; background: rgba(3.67, 1.82, 93.84, 0.44); box-shadow: 4px 4px 4px; filter: blur(4px)"></div>
