--- a/evidencias.html
+++ b/evidencias.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
 <div style="width: 100%; height: 100%; padding: 10px; background: white; justify-content: flex-start; align-items: flex-start; gap: 10px; display: inline-flex">
     <img style="width: 1430px; height: 2000px" src="https://via.placeholder.com/1430x2000" />
     <img style="width: 1430px; height: 364px; opacity: 0.80" src="https://via.placeholder.com/1430x364" />
@@ -23,4 +31,7 @@
     <img style="width: 309px; height: 207px; border-radius: 89px; border: 13px white solid" src="https://via.placeholder.com/309x207" />
     <img style="width: 309px; height: 208px; border-radius: 89px; border: 12px white solid" src="https://via.placeholder.com/309x208" />
     <div style="width: 284px; height: 41px; color: black; font-size: 24px; font-family: Times New Roman; font-weight: 400; word-wrap: break-word">The Legend of Zelda</div>
-</div>
+</div>    
+</body>
+</html>
+
