--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3756.2949387610647!2d-101.25537792463007!3d19.70006343208464!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842d0952b721df01%3A0xc9c72c0a0f1dcd4f!2sMiguel%20Castellanos%20S%C3%A1nchez%2C%20La%20Esperanza%2C%2058337%20Morelia%2C%20Mich.!5e0!3m2!1ses-419!2smx!4v1718222633487!5m2!1ses-419!2smx" style="width: 578px; height: 443px;  left: 71px; top: 1378px; position: absolute;"></iframe>
             <div style="width: 253px; height: 52px; left: 1034px; top: 1759px; position: absolute; background: #D9D9D9; border-radius: 54px; border: 7px black solid"></div>
             <img style="width: 444px; height: 89px; left: 277px; top: 507px; position: absolute" src="perfil (1).png" />
-            <div style="width: 197px; height: 33px; left: 662px; top: 822px; position: absolute; color: black; font-size: 24px; font-family: Inter; font-style: italic; font-weight: 900; word-wrap: break-word">940</div>
+            <div style="width: 197px; height: 33px; left: 662px; top: 822px; position: absolute; color: black; font-size: 24px; font-family: Inter; font-style: italic; font-weight: 900; word-wrap: break-word">Evidencias</div>
             <div style="width: 197px; height: 33px; left: 788px; top: 1400px; position: absolute; color: black; font-size: 24px; font-family: Inter; font-style: italic; font-weight: 900; word-wrap: break-word">jobs</div>
             <div style="width: 537px; height: 349px; left: 768px; top: 1410px; position: absolute; color: black; font-size: 24px; font-family: Inter; font-style: italic; font-weight: 900; word-wrap: break-word">____________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________</div>
             <img style="width: 73px; height: 68px; left: 36px; top: 19px; position: absolute; border-radius: 9999px" src="https://via.placeholder.com/73x68" />
@@ -70,6 +70,6 @@
             <div style="width: 297px; height: 64px; left: 1105px; top: 1772px; position: absolute; color: black; font-size: 24px; font-family: Inter; font-style: italic; font-weight: 900; word-wrap: break-word">VER MAS...</div>
             <a href="https://www.youtube.com/channel/UC8UNDST-mnZb7_egMMZLp1A"><img style="width: 50px; height: 40px; left: 1003px; top: 411px; position: absolute" src="perfil (2).png" /></a>
             </div>
-        </h1>940
+        </h1>
 </body>
 </html>
