--- a/trabajos.html
+++ b/trabajos.html
@@ -8,9 +8,9 @@
 <body>
     <div style="width: 100%; height: 100%; position: relative; background: black">
         <div style="width: 1356px; height: 1018px; left: 19px; top: 751px; position: absolute; background: linear-gradient(90deg, rgba(47.07, 154.05, 96.28, 0.80) 0%, rgba(81.16, 183.12, 240.47, 0.80) 100%); border-radius: 14px; border: 6px black solid"></div>
-        <img style="width: 1440px; height: 446px; left: 0px; top: 95px; position: absolute; border: 6px #FFDF8E solid" src="https://via.placeholder.com/1440x446" />
-        <img style="width: 1440px; height: 1450px; left: 0px; top: 541px; position: absolute; border: 6px #FFDF8E solid" src="https://via.placeholder.com/1440x1450" />
-        <img style="width: 166px; height: 161px; left: 621px; top: 1442px; position: absolute; border-radius: 89px" src="https://via.placeholder.com/166x161" />
+        <img style="width: 1440px; height: 446px; left: 0px; top: 95px; position: absolute; border: 6px #FFDF8E solid" src="fondo.png" />
+        <img style="width: 1440px; height: 1450px; left: 0px; top: 541px; position: absolute; border: 6px #FFDF8E solid" src="fondo.png" />
+        <img style="width: 166px; height: 161px; left: 621px; top: 1442px; position: absolute; border-radius: 89px" src="perfil.png" />
         <div style="width: 940px; height: 81px; left: 250px; top: 1895px; position: absolute; background: linear-gradient(90deg, #FF1B1B 0%, #F0C451 100%); border-radius: 14px; border: 6px black solid"></div>
         <div style="width: 368px; height: 33px; left: 590px; top: 1906px; position: absolute; color: black; font-size: 48px; font-family: Inter; font-style: italic; font-weight: 900; word-wrap: break-word">Evidencias</div>
         <div style="width: 940px; height: 81px; left: 265px; top: 659px; position: absolute; background: linear-gradient(90deg, #2F9A60 0%, #51B7F0 100%); border-radius: 14px; border: 6px black solid"></div>
@@ -33,6 +33,5 @@
         </div>
         <img style="width: 73px; height: 68px; left: 36px; top: 19px; position: absolute; border-radius: 9999px" src="https://via.placeholder.com/73x68" />
     </div>
-
 </body>
 </html>
