--- a/evidencias.html
+++ b/evidencias.html
@@ -18,7 +18,7 @@
         <img style="width: 309px; height: 207px; border-radius: 89px; border: 13px white solid" src="ot.png" />
         <img style="width: 309px; height: 207px; border-radius: 89px; border: 13px white solid" src="new-persona-3-reload-art-v0-2pfxinfmmadc1.png" />
         <div style="width: 80px; height: 70px; background: #D9D9D9; border-radius: 10px"></div>
-        <div style="width: 18px; height: 41px; color: black; font-size: 36px; font-family: Timmana; font-weight: 400; word-wrap: break-word"><</div>
+        <div style="width: 18px; height: 41px; color: black; font-size: 36px; font-family: Timmana; font-weight: 400; word-wrap: break-word"></div>
         <div style="width: 940px; height: 81px; background: linear-gradient(90deg, #FF1B1B 0%, #F0C451 100%); border-radius: 14px; border: 6px black solid"></div>
         <div style="width: 80px; height: 70px; background: #D9D9D9; border-radius: 10px"></div>
         <div style="width: 18px; height: 41px; color: black; font-size: 36px; font-family: Timmana; font-weight: 400; word-wrap: break-word">1</div>
