--- a/evidencias.html
+++ b/evidencias.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.html">
+    <link rel="stylesheet" href="evidencias.html">
 </head>
 <body>
     <div style="width: 100%; height: 100%; position: relative; background: white">
