--- a/evidencias.html
+++ b/evidencias.html
@@ -14,9 +14,9 @@
         <img style="width: 166px; height: 161px; left: 34px; top: 383px; position: absolute; border-radius: 89px" src="webp-320x320.png" />
         <div style="width: 1372px; height: 1150px; left: 34px; top: 511px; position: absolute; background: rgba(217, 217, 217, 0.15); border-radius: 49px"></div>
         <div style="width: 284px; height: 41px; left: 1450px; top: 10px; position: absolute; color: black; font-size: 24px; font-family: Times New Roman; font-weight: 400; word-wrap: break-word">The Legend of Zelda</div>
-        <a href=""><img style="width: 309px; height: 208px; left: 102px; top: 643px; position: absolute; border-radius: 89px; border: 13px white solid" src="ot.png" /></a>
-        <a href=""><img style="width: 309px; height: 208px; left: 565px; top: 642px; position: absolute; border-radius: 89px; border: 13px white solid" src="new-persona-3-reload-art-v0-2pfxinfmmadc1.png" /></a>
-        <a href=""><img style="width: 309px; height: 208px; left: 1028px; top: 642px; position: absolute; border-radius: 89px; border: 13px white solid" src="MegaroidCity.jpg" /></a>
+        <a href="ot.png"><img style="width: 309px; height: 208px; left: 102px; top: 643px; position: absolute; border-radius: 89px; border: 13px white solid" src="ot.png" /></a>
+        <a href="new-persona-3-reload-art-v0-2pfxinfmmadc1.png"><img style="width: 309px; height: 208px; left: 565px; top: 642px; position: absolute; border-radius: 89px; border: 13px white solid" src="new-persona-3-reload-art-v0-2pfxinfmmadc1.png" /></a>
+        <a href="MegaroidCity.jpg"><img style="width: 309px; height: 208px; left: 1028px; top: 642px; position: absolute; border-radius: 89px; border: 13px white solid" src="MegaroidCity.jpg" /></a>
         <div style="width: 1430px; height: 240px; left: 10px; top: 1708px; position: absolute; background: rgba(217, 217, 217, 0.50); border-radius: 45px"></div>
         <div style="width: 80px; height: 70px; left: 217px; top: 1559px; position: absolute; background: #D9D9D9; border-radius: 10px"></div>
         <div style="width: 80px; height: 70px; left: 864px; top: 1559px; position: absolute; background: #D9D9D9; border-radius: 10px"></div>
@@ -25,12 +25,12 @@
         <div style="width: 80px; height: 70px; left: 522px; top: 1559px; position: absolute; background: #D9D9D9; border-radius: 10px"></div>
         <div style="width: 80px; height: 70px; left: 640px; top: 1559px; position: absolute; background: #D9D9D9; border-radius: 10px"></div>
         <div style="width: 80px; height: 70px; left: 401px; top: 1559px; position: absolute; background: #D9D9D9; border-radius: 10px"></div>
-        <a href=""><img style="width: 309px; height: 207px; left: 1028px; top: 1208px; position: absolute; border-radius: 89px; border: 13px white solid" src="Koromaruuu.jpeg" /></a>
-        <a href=""><img style="width: 309px; height: 208px; left: 1028px; top: 925px; position: absolute; border-radius: 89px; border: 12px white solid" src="ta bien.gif" /></a>
-        <a href=""><img style="width: 309px; height: 207px; left: 102px; top: 1207px; position: absolute; border-radius: 89px; border: 13px white solid" src="zelda.jpg" /></a>
-        <a href=""><img style="width: 309px; height: 207px; left: 565px; top: 1207px; position: absolute; border-radius: 89px; border: 13px white solid" src="Default_vape_sad_man_3.jpg" /></a>
-        <a href=""><img style="width: 309px; height: 207px; left: 565px; top: 948px; position: absolute; border-radius: 89px; border: 13px white solid" src="wallpaperflare.com_wallpaper (3).jpg" /></a>
-        <a href=""><img style="width: 309px; height: 207px; left: 102px; top: 948px; position: absolute; border-radius: 89px; border: 13px white solid" src="deportes (1).png" /></a>
+        <a href="Koromaruuu.jpeg"><img style="width: 309px; height: 207px; left: 1028px; top: 1208px; position: absolute; border-radius: 89px; border: 13px white solid" src="Koromaruuu.jpeg" /></a>
+        <a href="ta bien.gif"><img style="width: 309px; height: 208px; left: 1028px; top: 925px; position: absolute; border-radius: 89px; border: 12px white solid" src="ta bien.gif" /></a>
+        <a href="zelda.jpg"><img style="width: 309px; height: 207px; left: 102px; top: 1207px; position: absolute; border-radius: 89px; border: 13px white solid" src="zelda.jpg" /></a>
+        <a href="Default_vape_sad_man_3.jpg"><img style="width: 309px; height: 207px; left: 565px; top: 1207px; position: absolute; border-radius: 89px; border: 13px white solid" src="Default_vape_sad_man_3.jpg" /></a>
+        <a href="wallpaperflare.com_wallpaper (3).jpg"><img style="width: 309px; height: 207px; left: 565px; top: 948px; position: absolute; border-radius: 89px; border: 13px white solid" src="wallpaperflare.com_wallpaper (3).jpg" /></a>
+        <a href="deportes (1).png"><img style="width: 309px; height: 207px; left: 102px; top: 948px; position: absolute; border-radius: 89px; border: 13px white solid" src="deportes (1).png" /></a>
         <img style="width: 1430px; height: 103px; left: 10px; top: 10px; position: absolute" src="inicio2.png" />
         <div style="width: 18px; height: 41px; left: 432px; top: 1573px; position: absolute; color: black; font-size: 36px; font-family: Timmana; font-weight: 400; word-wrap: break-word">1</div>
         <div style="width: 18px; height: 41px; left: 895px; top: 1573px; position: absolute; color: black; font-size: 36px; font-family: Timmana; font-weight: 400; word-wrap: break-word">5</div>
