--- a/evidencias.html
+++ b/evidencias.html
@@ -41,7 +41,7 @@
         <div style="width: 18px; height: 41px; left: 556px; top: 1573px; position: absolute; color: black; font-size: 36px; font-family: Timmana; font-weight: 400; word-wrap: break-word">2</div>
         <div style="width: 940px; height: 81px; left: 257px; top: 414px; position: absolute; background: linear-gradient(90deg, #FF1B1B 0%, #F0C451 100%); border-radius: 14px; border: 6px black solid"></div>
         <div style="width: 368px; height: 33px; left: 623px; top: 431px; position: absolute; color: black; font-size: 48px; font-family: Inter; font-style: italic; font-weight: 900; word-wrap: break-word">Evidencias</div>
-        <img style="width: 73px; height: 68px; left: 44px; top: 32px; position: absolute; border-radius: 9999px" src="inicio.png" />
+        <a href="index.html"><img style="width: 73px; height: 68px; left: 44px; top: 32px; position: absolute; border-radius: 9999px" src="inicio.png" />
     </div>
     </div>
     </div>
